# ChangeLog for app-shells/dash
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-shells/dash/ChangeLog,v 1.89 2011/10/30 16:15:52 armin76 Exp $

  30 Oct 2011; Raúl Porcel <armin76@gentoo.org> dash-0.5.5.1.7.ebuild:
  alpha/ia64/s390/sh/sparc stable wrt #383057

  23 Oct 2011; nixnut <nixnut@gentoo.org> dash-0.5.5.1.7.ebuild:
  ppc stable #383015

  05 Oct 2011; Markus Meier <maekke@gentoo.org> dash-0.5.5.1.7.ebuild:
  arm stable, bug #383015

  21 Sep 2011; Jeroen Roovers <jer@gentoo.org> dash-0.5.5.1.7.ebuild:
  Stable for HPPA (bug #383015).

  19 Sep 2011; Andreas Schuerch <nativemad@gentoo.org> dash-0.5.5.1.7.ebuild:
  x86 stable, thanks Myckel. Bug 383015

  16 Sep 2011; Tony Vroon <chainsaw@gentoo.org> dash-0.5.5.1.7.ebuild:
  Marked stable on AMD64 based on arch testing by Ian "idella4" Delaney &
  Agostino "ago" Sarubbo in bug #383015.

*dash-0.5.7.1 (15 Sep 2011)

  15 Sep 2011; Mike Frysinger <vapier@gentoo.org> +dash-0.5.7.1.ebuild:
  Version bump #381777 by Hans.

  08 Jun 2011; Matt Turner <mattst88@gentoo.org> dash-0.5.5.1.7.ebuild:
  Add ~mips keyword, prerequisite for bug 370685

*dash-0.5.5.1.7 (15 Sep 2010)

  15 Sep 2010; Mike Frysinger <vapier@gentoo.org> +dash-0.5.5.1.7.ebuild,
  +files/dash-0.5.5.1-octal.patch, -dash-0.5.6.1-r1.ebuild,
  -files/dash-0.5.6.1-read-ifs.patch:
  Update to latest 0.5.5.x Debian version. Drop 0.5.6.x for now since Debian no
  longer has it either. Fix octal parsing #337329 by Michał Górny.

  11 Sep 2010; Mike Frysinger <vapier@gentoo.org> dash-0.5.6.1-r1.ebuild:
  Drop forced libedit static linking #334693.

  11 Sep 2010; Mike Frysinger <vapier@gentoo.org> dash-0.5.6.1-r1.ebuild:
  Fix inverted static-libs depend #334693.

  27 Aug 2010; Mike Frysinger <vapier@gentoo.org> dash-0.5.6.1-r1.ebuild:
  Require static-libs isn't built with USE=static-libs #334693 by Rebecca
  Menessec.

*dash-0.5.6.1-r1 (22 Aug 2010)
